2019-12-16  Markus Gans  <guru.mail@muenster.de>
	* New widget class FComboBox to provide a dropdown list 
	  with an input field

2019-11-17  Markus Gans  <guru.mail@muenster.de>
	* Revision of FString number input stream

2019-11-16  Markus Gans  <guru.mail@muenster.de>
	* New Widget class FSpinBox to provide spin boxes

2019-11-06  Markus Gans  <guru.mail@muenster.de>
	* Improved display of the NewFont midline 

2019-11-03  Markus Gans  <guru.mail@muenster.de>
	* Newfont specialization for 8x16 and 9x16 pixel character
	* Fixes the display of reverse characters on the 16 color 
	  Linux console

2019-10-28  Markus Gans  <guru.mail@muenster.de>
	* Unicode support for 8x16graph font

2019-10-20  Markus Gans  <guru.mail@muenster.de>
	* New method setInputType() in FLineEdit that allows to obscure 
	  password entries
	* FAcceleratorList reimplemented as non-pointer

2019-10-15  Markus Gans  <guru.mail@muenster.de>
	* Version 0.6.0

2019-10-13  Markus Gans  <guru.mail@muenster.de>
	* Compile fix for Cygwin and Linux on arm architectures
	* A small color palette optimization
	* Corrected east asian ambiguous character width for OpenBSD, NetBSD, 
	  FreeBSD and Solaris

2019-10-05  Markus Gans  <guru.mail@muenster.de>
	* Internal redesign of the callback call
	* Mapping of key functions in an associative container to simplify 
	  onKeyPress() in FListBox, FListView, FTextView and FScrollView

2019-10-01  Markus Gans  <guru.mail@muenster.de>
	* Replacing null-terminated wide strings with FString objects
	* Fix for getColumnWidth() with newfont character

2019-09-29  Markus Gans  <guru.mail@muenster.de>
	* Streaming into an FTextView() object
	* Fixes the streaming of empty FString objects into a stream with 
	  a width > 0
	* The FString operator [] now returns a null character ('\0') 
	  if the position is equal to the string length

2019-09-28  Markus Gans  <guru.mail@muenster.de>
	* Support for displaying full-width characters (2 columns wide) 